// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly with 1 expenses 1`] = `
<div>
  <h2>
    Viewing 
    1
     
    expense
     totalling 
    $1.00
     
  </h2>
</div>
`;

exports[`should render correctly with 2 expenses 1`] = `
<div>
  <h2>
    Viewing 
    2
     
    expenses
     totalling 
    $1.00
     
  </h2>
</div>
`;
